#251: Renamed transitive failure to transitive defect.